objects/Product_Module__c/Product_Module__c.object-meta.xml
<CustomObject>
    <description>Junction table to link Products and Modules.</description>
    <label>Product Module</label>
    <nameField>
        <displayFormat>PRDMD-{000000}</displayFormat>
        <label>Product Module</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>