objects/Product_Module__c/fields/Attribution_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Percentage__c</fullName>
    <label>Attribution Percentage</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>