objects/Product_Module__c/fields/Exclude_from_quoted_module__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_quoted_module__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Referenced in the New Quoted Module APEX Job</description>
    <label>Exclude from quoted module</label>
    <type>Checkbox</type>
</CustomField>