objects/Product_Module__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Product Modules</relationshipLabel>
    <relationshipName>Product_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>