objects/Product_Module__c/fields/Module_Product__c.field-meta.xml
<CustomField>
    <fullName>Module_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will contain the Product ID for the Module as opposed to the Product ID of the Product.</description>
    <label>Module Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Modules (Module Product)</relationshipLabel>
    <relationshipName>Product_Product</relationshipName>
    <type>Lookup</type>
</CustomField>