objects/Product_Module__c/fields/Module_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Module_Product_SKU__c</fullName>
    <formula>Module_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Product SKU</label>
    <type>Text</type>
</CustomField>