objects/Product_Module__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <label>Product SKU</label>
    <type>Text</type>
</CustomField>