objects/Product_Module__c/fields/Simple_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Simple_Product_Name__c</fullName>
    <description>Returns just the name of the Product, without the addition of the Product Code</description>
    <formula>Product__r.Name</formula>
    <inlineHelpText>Returns just the name of the Product, without the addition of the Product Code</inlineHelpText>
    <label>Simple Product Name</label>
    <type>Text</type>
</CustomField>