objects/Product_Module__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique ID used to prevent the creation of duplicate Product Module records. Set via Flow.</description>
    <inlineHelpText>Unique ID used to prevent the creation of duplicate Product Module records. Set via Flow.</inlineHelpText>
    <label>UniqueId</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>