objects/Product_Module__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_SKU__c</columns>
    <columns>Module__c</columns>
    <columns>Module_Product__c</columns>
    <columns>Module_Product_SKU__c</columns>
    <columns>Attribution_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>